# sparql-rag-agent

./: .gitignore  README.md  langgraph.json  pyproject.toml
agent/: .env
development_lab/: qdrant_rag_agent.ipynb
embeddings_model_cache/models--qdrant--bge-small-en-v1.5-onnx-q/: files_metadata.json
entity indexing/: endpoint_loader.py  entities_collection.py  entitites_collection.py  entity_indexing_pipeline.py  entity_indexing_pipeline_v2.py  entity_indexing_pipeline_v3.py  entity_loading_testing.ipynb  index_embedding.ipynb  mps_testing.py  retrieval_eval.ipynb  retrievers.py  sparql_entity_queries.py  test_pipeline.py  upload_tracker.py
entity indexing/upload_logs/: biomedical_entities_uploaded_ids.json
experiments/eval/ev_2025-04-08_19-56-53/: 112_Total_number_of_reaction_ec_protein_links_comparison.ttl  117_Retrieve_parent_reactions_and_their_catalyzing_enzymes_for_a_metabolite_that_is_not_directly_involved_in_a_reaction_comparison.ttl  12_comparison.ttl  50_comparison.ttl  51_comparison.ttl  5_comparison.ttl  evaluation_dataset.json  testset_meta_data.json
experiments/testing/: agent_evaluation.py  evaluation_notebook.ipynb  proto.ipynb  sparql_query_validator.ipynb
experiments/utilities/: evaluation.py  format.py  metrics.py  sparql_syntax_validation.py
scr/: __init__.py
scr/agent/nodes/: entity_resolution.py  question_understanding.py  sparql_query_construction.py
scr/agent/prompts/: prompts.py
scr/agent/state/: state.py
scr/agent/utils/: config.py  graph.py  llm_utils.py
scr/agent/utils/nodes/: entity_resolution.py  question_understanding.py  question_understaning.py  sparql_query_construction.py
scr/agent/utils/state/: state.py
scr/vectordb/: docker-compose.yml  qdrant_config.yml
scr/vectordb/data/qdrant/: raft_state.json
scr/vectordb/data/qdrant/collections/biomedical_entities/: config.json
scr/vectordb/data/qdrant/collections/indexed_classes/: config.json
scr/vectordb/data/qdrant/collections/indexed_classes/0/: newest_clocks.json  replica_state.json
sparql_rag_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_agent.py  test_llm.py  test_question.py  test_question_understanding.py
(+177 files in other folders)
