[project]
name = "sparql-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-together>=0.3.0",
    "langgraph>=0.2.74",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
