[project]
name = "sparql-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.19",
    "langgraph>=0.3.2",
    "langchain-community>=0.2.1",
    "sparqlwrapper>=2.0.0",
    "jupyter>=1.0.0",
    "langchain-core>=0.3.40",
    "rdflib>=7.1.3",
    "pandas>=2.2.3",
    "httpx>=0.28.1",
    "certifi>=2025.1.31",
    "fastembed>=0.2.6",
    "qdrant-client>=1.13.2",
    "langchain-qdrant>=0.2.0",
]

